--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
    "default_title": "Buzzik Music Visualization"
  },
 "chrome_url_overrides" : {
-  "newtab": "login.html"
+  "newtab": "homepage.html"
 },
  "permissions": ["activeTab"]
 }
